# lectureTask

./: AddBookDialog.cpp  AddBookDialog.h  AddUserDialog.cpp  AddUserDialog.h  Book.cpp  Book.h  CMakeLists.txt  Library.cpp  Library.h  README.md  RemoveBookDialog.cpp  RemoveBookDialog.h  User.cpp  User.h  findBookDialog.cpp  findBookDialog.h  findUserDialog.cpp  findUserDialog.h  main.cpp  mainwindow.cpp  mainwindow.h  removeUserDialog.cpp  removeUserDialog.h
Google_tests/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp
